# Law-agent

./: .gitignore  README.md  clear_logs.py  docker-compose.yml  pyproject.toml  todo.txt  作品说明.md
agent/: chat.py  testchat.py
backend/: .env  main.py  pyproject.toml
backend/app/: celery_config.py  exceptions.py  main.py
backend/app/api/v1/: auth.py  chat.py  config.py  cyber_judge.py  form_filling.py  graph.py  prompts.py  rag.py
backend/app/core/: config.py  constants.py  logger.py
backend/app/schema/: auth.py  chat.py  config.py  cyber_judge.py  form_filling.py  graph.py  prompt_config.py  rag.py
backend/app/service/: auth_service.py  session_service.py  vector_db.py
backend/app/service/agent/: conversation_manager.py  conversation_state.py  entity_extractor.py  factory.py  hybrid_rag_agent.py  intent_classifier.py  legal_conversation_agent.py  official_tools.py  pre_retriever.py  query_rewriter.py  rag_retriever.py  retrieval_pipeline.py  sse_streamer.py
backend/app/service/cyber_judge/: __init__.py  agent.py  fact_extractor.py  intent_analyzer.py  prompts.py  state.py  tools.py
backend/app/tasks/: document_tasks.py  graph_tasks.py
backend/data/: Labour_Litigation_Template.docx  Labour_Litigation_Template.json
backend/docs/: ASYNC_UPLOAD_GUIDE.md  MMR检索策略.md  rag.md  retrieval_strategies.md  基础向量检索_Basic策略.md  多查询检索_MultiQuery策略.md  多轮对话.md  得理官方案例搜索api接口文档.md  得理官方法规搜索api接口文档.md  混合检索_Hybrid策略.md  知识图谱测试指南.md  重排序_Reranking策略.md
backend/scripts/: download_models.py  init-model-optimized.sh  kill_port.py  start-celery.bat  start-celery.sh
(+97 files in other folders)
