[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
    # 向量数据库
    "chromadb>=0.4.0",
    # LangChain 扩展
    "langchain-community>=0.0.10",
    "langchain-chroma>=0.1.0",    # 或 "langchain-milvus>=0.1.0"
    
    # 工具库
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    
    # 文件处理
    "python-multipart>=0.0.6",
    "pypdf>=3.17.0",
    "docx2txt>=0.8",
    "openpyxl>=3.1.0",
    
    # 文本处理
    "jieba>=0.42.1",
    "langchain-text-splitters>=0.0.1",
    
    # 异步任务处理
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
